# network_storage

./: .env-example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  logging.conf  pyproject.toml  setup.cfg
src/: app.py  auth.py  depends.py
src/CRUD/: device.py  network.py  reference_book.py  user.py
src/alembic/: env.py
src/alembic/versions/: 00904e7b6562_ralationship.py  245173d9f178_devica_network_unique_constraint.py  377eccf31929_first_migration.py  41bad83a77b2_devica_network_unique_constraint.py  421919d1c723_devica_network_unique_constraint.py  47d9f7961f70_change_password_length_d.py  4f7dedec183c_refbook.py  54964201d2ab_first_migration.py  57bc6d05b2be_.py  62a76fdb6ed5_.py  8281990d4d62_.py  8ab5a9d49632_.py  8b6a24bb6cb6_initial_migration.py  9913c32b6ed3_change_network_table.py  9e3b473c0f90_.py  aef6ee025560_change_network_table.py  af92499521ad_devices_and_network_interface.py  b861041653d9_fix_ref.py  c0fd378da1e9_devica_network_unique_constraint.py  c124829f968a_fix_ref.py  c3acfb8ff02a_fix_ref.py  ce80db2149b6_add_service_reference_book.py  d3d1a74feded_network.py  d91492aee6c5_fix_ref.py  f6c93ad96dd9_add_user_table.py  f7a6abc2c8ae_change_network_parent_id_column_name.py
src/core/: auth.py  config.py  logger.py
src/database/: base.py  engine.py
src/middleware/: middleware.py
src/models/: device.py  network.py  reference_book.py  user.py
src/routers/: api_router_v1.py
src/schemas/: auth.py  device.py  network.py  reference_book.py  user.py
src/services/: auth.py
src/validators/: device.py  networ.py
(+4 files in other folders)
